syntax = "proto3";

package exonum.crypto;

option java_package = "com.exonum.core.messages";

message Hash { bytes data = 1; }

message PublicKey { bytes data = 1; }

message Signature { bytes data = 1; }
